--- a/Web Development/Lec6/FirstProg/index.html
+++ b/Web Development/Lec6/FirstProg/index.html
@@ -8,16 +8,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>This is heading 1</h1>
-    <h2>This is heading 2</h2>
-    <h3>This is heading 3</h3>
-    <h4>This is heading 4</h4>
-    <h5>This is heading 5</h5>
-    <h6>This is heading 6</h6>
+    <h1 class="heading">This is heading 1</h1>
+    <h2 class="heading">This is heading 2</h2>
+    <h3 class="heading">This is heading 3</h3>
+    <h4 class="heading">This is heading 4</h4>
+    <h5 class="heading">This is heading 5</h5>
+    <h6 class="heading">This is heading 6</h6>
     <!-- LOREM100 -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In nobis temporibus veritatis esse reiciendis nam, excepturi totam, earum praesentium sequi incidunt est rerum perferendis. Tempore deserunt sint maxime at possimus, veritatis sed ipsa illo
         laboriosam, dolorum modi autem iste? Perspiciatis ab consequatur accusamus aliquam, excepturi asperiores, veritatis error obcaecati ut, totam voluptas architecto praesentium suscipit adipisci quae itaque libero. Accusantium odio blanditiis sapiente
@@ -25,8 +26,8 @@
         pariatur autem!</p>
 
     <!-- anchor tags -->
-    <a href="https://www.google.com/">Go to google</a>
-    <img src="https://i.picsum.photos/id/588/200/300.jpg?hmac=Bb5mvfvSw-sKhocAA4Mfdb78ysl5ktbClTt-Lc0IyWk" alt="">
+    <a href=" https://www.google.com/ ">Go to google</a>
+    <img src="https://i.picsum.photos/id/588/200/300.jpg?hmac=Bb5mvfvSw-sKhocAA4Mfdb78ysl5ktbClTt-Lc0IyWk " alt=" ">
     <!-- to get 4 elements in ul-> ul>li*4 -->
     <ul>
         <li>I am a list item</li>
@@ -34,7 +35,7 @@
         <li>I am a list item</li>
         <li>I am a list item</li>
     </ul>
-
+    <p style="color:red; ">This is a text using style</p>
     <!-- similarly for ol -->
     <ol>
         <li>This is item list</li>
@@ -43,6 +44,9 @@
         <li>This is item list</li>
         <li>This is item list</li>
     </ol>
+
+    <!-- div tag -->
 </body>
+<!-- use html semantics: https://www.w3schools.com/html/html5_semantic_elements.asp -->
 
 </html>
