--- a/Web Development/Lec6/DemoPage/index.html
+++ b/Web Development/Lec6/DemoPage/index.html
@@ -16,8 +16,8 @@
             <nav>
                 <!-- ul>li>a*3 -->
                 <ul class="navlist">
-                    <li ">
-                    <a href="#html ">HTML5</a>
+                    <li>
+                        <a href="#html ">HTML5</a>
                     </li>
                     <li>
                         <a href="#css ">CSS3</a>
@@ -28,24 +28,24 @@
                 </ul>
             </nav>
         </header>
-        <section class = "showcase ">
+        <section class="showcase ">
             <img src="https://raw.githubusercontent.com/Jasbir96/pp-10__HTML/main/img/lap.jpeg " alt="laptopt image ">
         </section>
 
         <!-- (.comtainer>(img+h2+p))*3 -->
         <!-- section.continaer>(img+h2+p)*3 -->
         <sectiom class="description ">
-            <div class="container " id="html ">
-                <img src="https://github.com/Jasbir96/pp-10__HTML/blob/main/img/html.png?raw=true " alt="html image "> h
+            <div class="container" id="html">
+                <img src="https://github.com/Jasbir96/pp-10__HTML/blob/main/img/html.png?raw=true " alt="html image ">
                 <h2>HTML5</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem modi ex recusandae fugit autem!</p>
             </div>
-            <div class="container " id="css ">
+            <div class="container" id="css">
                 <img src="https://github.com/Jasbir96/pp-10__HTML/blob/main/img/css.png?raw=true " alt="css3 image ">
-                <h2>divCSS</h2>
+                <h2>CSS</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, culpa.</p>
             </div>
-            <div class="container " id="js ">
+            <div class="container" id="js">
                 <img src="https://github.com/Jasbir96/pp-10__HTML/blob/main/img/icon.png?raw=true " alt="javascript image ">
                 <h2>JavaScript</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, distinctio mollitia eligendi adipisci excepturi cupiditate.</p>
