--- a/Web Development/Lec7/facts/index.html
+++ b/Web Development/Lec7/facts/index.html
@@ -28,6 +28,10 @@
         <!-- list items -->
         <li>Hi i am a li inside ul</li>
         <li>Hi i am a second li !!!</li>
+        <li>
+            <p>Hello Nirbhay Kumar</p>
+        </li>
+        <p>P inside UL</p>
     </ul>
 
     <!-- table tag -->
@@ -63,6 +67,12 @@
             </tr>
         </tbody>
     </table>
+
+    <p>This is last</p>
+
+    <p class="para main">This is p1</p>
+    <p class="para">This is p2</p>
+    <p class="para" id='unique'>This is p3</p>
 </body>
 
 </html>
